--- a/test-task/uch-yantik/index.html
+++ b/test-task/uch-yantik/index.html
@@ -26,11 +26,11 @@
                     </div>
                     <div class="header__address-wrapper">
                         <div class="header__address">
-                            <img class="header__address-icon" src="img/sprite/icon-location.svg" alt="Иконка адреса">
+                            <img class="header__address-icon" src="img/sprite/icon-contacts.svg" alt="Иконка адреса">
                             <span class="header__address-text">Ул. Севастопольская&nbsp;4, Симферополь</span>
                         </div>
                         <a href="#" class="header__address-link">
-                            <img class="header__address-icon" src="img/sprite/icon-location.svg" alt="Иконка адреса">
+                            <img class="header__address-icon" src="img/sprite/icon-contacts.svg" alt="Иконка адреса">
                             <span class="header__address-link-text">Смотреть на&nbsp;карте</span>
                         </a>
                     </div>
@@ -501,6 +501,49 @@
                     </div>
                 </div>
             </section>
+            <section class="contacts">
+                <div class="container">
+                    <div class="contacts__wrapper">
+                        <div class="contacts__info">
+                            <span class="contacts__welcome">ждем в&nbsp;гости!</span>
+                            <span class="contacts__open-hours">Ежедневно, с&nbsp;9&nbsp;до&nbsp;19</span>
+                            <div class="contacts__address">
+                                <span class="contacts__caption">мы находимся по адресу</span>
+                                <div class="contacts__address-wrapper">
+                                    <img class="contacts__icon" src="img/sprite/icon-location.svg" alt="иконка локации">
+                                    <div class="contacts__address-text">г. Симферополь, Ул. Севастопольская 4</div>
+                                </div>
+                            </div>
+                            <div class="contacts__phone">
+                                <span class="contacts__caption">можете с&nbsp;нами связаться по&nbsp;номеру</span>
+                                <div class="contacts__phone-wrapper">
+                                    <img class="contacts__icon" src="img/sprite/icon-phone.svg" alt="иконка телефона">
+                                    <div class="contacts__phone-list">
+                                        <a href="tel:+79787673452" class="contacts__phone-item">+7 978 767-34-52</a>
+                                        <a href="tel:+79787673452" class="contacts__phone-item">+7 978 767-34-52</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="contacts__social">
+                                <span class="contacts__caption">мы&nbsp;в&nbsp;социальных сетях</span>
+                                <div class="contacts__social-wrapper">
+                                    <a class="contacts__social-item">
+                                        <img src="img/sprite/icon-vk.svg" alt="иконка Вконтакте">
+                                    </a>
+                                    <a class="contacts__social-item">
+                                        <img src="img/sprite/icon-telegram.svg" alt="иконка Телеграмма">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contacts__location">
+                            <div class="contacts__map-wrapper">
+                                <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Aad7e0cc078a83d89de42f62a3e26970b150d54b89440094aac08e95079441ed2&amp;source=constructor" width="844" height="495" frameborder="0"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+            </section>
         </main>
         <footer class="footer__wrapper">
             <div class="container">
@@ -525,7 +568,7 @@
                     <div class="footer__contacts">
                         <div class="footer__address">
                             <svg class="footer__address-icon">
-                                <use xlink:href="img/sprite.svg#icon-location"></use>
+                                <use xlink:href="img/sprite.svg#icon-contacts"></use>
                             </svg>
                             <span class="footer__aaddress-text">
                                 Ул. Севастопольская&nbsp;4, Симферополь
