--- a/test-task/uch-yantik/index.html
+++ b/test-task/uch-yantik/index.html
@@ -67,6 +67,7 @@
                             </div>
                         </div>
                         <picture>
+
                             <source media="(max-width: 767px)" srcset="img/banner-img-mobile.png 1x,
                             img/banner-img-mobile@2x.png 2x">
                             <img class="banner__img" src="img/banner-img.png" alt="Фото выпечки"
@@ -542,7 +543,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="contacts__back">
+                        <div class="contacts__back-text">
+                            <span class="contacts__back-caption">вернуться</span>
+                            <span class="contacts__back-name">на&nbsp;главную</span>
+                        </div>
+                        <a href="#" class="contacts__back-link">
+                            <img class="contacts__back-icon" src="img/sprite/icon-arrow-down.svg" alt="Стрелка вниз">
+                        </a>
                     </div>
+                </div>
             </section>
         </main>
         <footer class="footer__wrapper">
